--- a/apps/rover/src/controller.c.jinja
+++ b/apps/rover/src/controller.c.jinja
@@ -8,19 +8,18 @@ float gx = 0;
 float gy = 0;
 float gz = 0;
 
-{%- set build = hcdf.build -%}
-{%- if build == "simulation" %}
-{%- set controller = hcdf.simulation -%}
-{% endif %}
-{%- if build == "real" %}
-{%- set controller = hcdf.real -%}
-{% endif %}
-{%- set actuators = controller.actuators -%}
+
+{%- set vehicle = hcdf.vehicle -%}
+{%- set mcu = vehicle.mcu -%}
+{%- set actuators = mcu.actuators -%}
+{%- set inputs = mcu.inputs -%}
+{%- if actuators.servos -%}
+{% set servos = actuators.servos %}
+{% endif %} 
+{% set escs = actuators.escs %}
 {%- set mixer = actuators.mixer -%}
-{%- set inputs = controller.inputs -%}
 
 void listener_controller_callback(const struct zbus_channel *chan) {
-    
     
     if (chan == &chan_rc_input) {
         const struct msg_rc_input_t *msg_rc_input = (const struct msg_rc_input_t *)zbus_chan_const_msg(chan);
@@ -39,35 +38,30 @@ void listener_controller_callback(const struct zbus_channel *chan) {
 {% endif %}  
         bool armed = msg_rc_input->armed;
       
-{%- if mixer.type == "quadcopter" %}
-        double kd = 0.05;
-
-        double thrust_trim = 0.76;
-        double mix_thrust = armed ? vt + thrust_trim : 0;
-        double mix_roll = armed ? vr*0.1 - kd*gx : 0;
-        double mix_pitch = armed ? vp*0.1 - kd*gy : 0;
-        double mix_yaw = armed ? vy*0.1 - kd*gz : 0;
-
-        
-        actuators_msg.actuator0_value = mix_thrust - mix_roll - mix_pitch - mix_yaw; // motor 0 (front right)
-        actuators_msg.actuator1_value = mix_thrust + mix_roll + mix_pitch - mix_yaw; // motor 1 (rear left)
-        actuators_msg.actuator2_value = mix_thrust + mix_roll - mix_pitch + mix_yaw; // motor 2 (front left)
-        actuators_msg.actuator3_value = mix_thrust - mix_roll + mix_pitch + mix_yaw; // motor 3 (rear right)
-{% endif %}
-{% if ( mixer.type == "differential" or mixer.type == "ackermann") %}
+{% if ( mixer.type == "ackermann") %}
         double mix_thrust = armed ? vt : 0;
         double mix_yaw = armed ? vy : 0;
 {%- set yaw = mixer.yaw.split(',') -%}
 {% set thrust = mixer.thrust.split(',') %}
-    {% for joint in actuators.joints.joint  %}
-        double scale{{ loop.index0 }} = ({{ joint.max }} - {{ joint.min }}) / 2.0;
-        double actuator{{ loop.index0 }} = {{ thrust[loop.index0] }}*mix_thrust*scale{{ loop.index0 }} + {{ yaw[loop.index0] }}*mix_yaw*scale{{ loop.index0 }};
-        if(actuator{{ loop.index0 }} > {{ joint.max }}) {
-            actuator{{ loop.index0 }} = {{ joint.max }};
-        } else if (actuator{{ loop.index0 }} < {{ joint.min }}) {
-            actuator{{ loop.index0 }} = {{ joint.min }};
+    {% for name, esc in escs.items()  %}
+        double scale{{ esc.control_index }} = ({{ esc.max_rps }} - {{ esc.min_rps }}) / 2.0;
+        double actuator{{ esc.control_index }} = {{ thrust[esc.control_index] }}*mix_thrust*scale{{ esc.control_index }} + {{ yaw[esc.control_index] }}*mix_yaw*scale{{ esc.control_index }};
+        if(actuator{{ esc.control_index }} > {{ esc.max_rps }}) {
+            actuator{{ esc.control_index }} = {{ esc.max_rps }};
+        } else if (actuator{{ esc.control_index }} < {{ esc.min_rps }}) {
+            actuator{{ esc.control_index }} = {{ esc.min_rps }};
         }
-        actuators_msg.actuator{{ joint.control_index }}_value = actuator{{ loop.index0 }};
+        actuators_msg.actuator{{ esc.control_index }}_value = actuator{{ esc.control_index }};
+    {% endfor %}
+    {% for name, servo in servos.items()  %}
+        double scale{{ servo.control_index }} = ({{ servo.max }} - {{ servo.min }}) / 2.0;
+        double actuator{{ servo.control_index }} = {{ thrust[servo.control_index] }}*mix_thrust*scale{{ servo.control_index }} + {{ yaw[servo.control_index] }}*mix_yaw*scale{{ servo.control_index }};
+        if(actuator{{ servo.control_index }} > {{ servo.max }}) {
+            actuator{{servo.control_index }} = {{ servo.max }};
+        } else if (actuator{{ servo.control_index }} < {{ servo.min }}) {
+            actuator{{ servo.control_index }} = {{ servo.min }};
+        }
+        actuators_msg.actuator{{ servo.control_index }}_value = actuator{{ servo.control_index }};
     {% endfor %}
 {%- endif %}
 
