Hook up trajectory and odometry topics.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/lib/sim_gz/src/sim_gz_driver.cc.jinja
+++ b/lib/sim_gz/src/sim_gz_driver.cc.jinja
@@ -183,16 +183,19 @@ void trajectory_callback(const gz::msgs::PolynomialTrajectory &msg) {
     msg_trajectory_t msg_trajectory{
         .uptime_nsec=uptime,
         .sequence=uint16_t(msg.sequence()),
-        .poly_order=uint8_t(msg.poly_order()),
         .time_start=msg.time_start(),
         .time_end=msg.time_end(),
         .x={},
-        .y={}
+        .y={},
+        .z={},
+        .yaw={}
     };
-    for (int m = 0; m < msg.poly_order(); m++)
+    for (int m = 0; m < msg.x_size(); m++)
     {
         msg_trajectory.x[m]=msg.x()[m];
         msg_trajectory.y[m]=msg.y()[m];
+        msg_trajectory.z[m]=msg.z()[m];
+        msg_trajectory.yaw[m]=msg.yaw()[m];
     };
     queue_trajectory.push(msg_trajectory);
 }
@@ -294,6 +297,14 @@ void thread_sim_entry_point(void)
     if (!sub_imu)
     {
         std::cerr << "Error subscribing to topic [" << imu_topic << "]" << std::endl;
+        return;
+    }
+
+    // odom sub
+    bool sub_odom = node.Subscribe<gz::msgs::OdometryWithCovariance>(odom_topic, odom_callback);
+    if (!sub_odom)
+    {
+        std::cerr << "Error subscribing to topic [" << odom_topic << "]" << std::endl;
         return;
     }
 
